@@ -1,5 +1,6 @@
 V.Next
 ---------
+- [MINOR] Add IpcStrategyWithBackup (#2301)
 - [PATCH] Fix MSAL Issue 1864 (#2280)
 - [MINOR] Add AccountManagerBackupIpcStrategyTargetingSpecificBrokerApp (#2294)
 - [MINOR] Adding additional fields to JwtRequestBody for sending PRTv4 requests (#2289)
